# inputlog

./: .env  .gitignore  README.md  main.py  pyproject.toml  settings.py  settings.toml  settings_logger.toml  steps.sh
hyphenate/: Cargo.toml
hyphenate/src/: main.rs
inputlog/: constituency.py  frequency.py  hyphenation.py  language_detection.py  linguistics.py  settings.py  validators.py
