[tool.poetry]
name = "inputlog"
version = "0.1.0"
description = ""
authors = ["Enrique Manjavacas <enrique.manjavacas@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.7.4"
fastapi = "^0.110.1"
lingua-language-detector = "^2.0.2"
typing-extensions = "^4.11.0"
pydantic-settings = "^2.2.1"
lxml = "^5.2.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
